--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-    "name": "full-stack-app",
-    "version": "1.0.0",
-    "scripts": {
-      "start": "npm run start-api && npm run start-ui",
-      "start-api": "cd api && npm start",
-      "start-ui": "cd ui && npm start"
-    }
+  "name": "full-stack-app",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "concurrently \"npm run start-api\" \"npm run start-ui\"",
+    "start-api": "cd api && npm start",
+    "start-ui": "cd ui && npm start"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
+}
