--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "full-stack-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "concurrently \"npm run start-api\" \"npm run start-ui\"",
+    "start": "start-ui",
     "start-api": "cd api && npm start",
     "start-ui": "cd ui && npm start"
   },
