--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start2": "ts-node main.ts",
-    "start": "node dist/main.js",
+    "start": "node api/dist/main.js",
     "build": "tsc --build"
   },
   "keywords": [],
